# animutils

./: .env.example  .gitignore  pyproject.toml
src/animutils/: app.py  gcal.py  mal_auth.py  mal_client.py  schedule.py
