[project]
name = "animutils"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40",
    "streamlit-calendar>=1.3",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "google-api-python-client>=2.150",
    "google-auth-oauthlib>=1.2",
    "pydantic>=2.9",
    "tzlocal>=5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/animutils"]
